k8s/telemetry-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-app
  namespace: monitoring
  labels:
    app.kubernetes.io/name: telemetry-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: telemetry-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telemetry-app
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        monitoring.spoud.io/profiling: "true"
    spec:
      containers:
        - name: telemetry-app
          image: stmichael/telemetry-app:1.5.0-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: 1
              memory: 1Gi
