k8s/telemetry-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-app
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: telemetry-app
  ports:
    - protocol: TCP
      port: 8080
